plugins {
    id 'java-library'
    id 'application'
}

base {
    archivesName.set('xa-mass-scenario-workers-jvm')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    applicationName = 'xa-mass-scenario-workers'
    mainClass = 'com.xa.mass.scenarioworkers.ScenarioWorkerHostMain'
}

dependencies {
    implementation project(':transport:worker-core')
    implementation project(':transport:worker-delivery-contract')
    implementation project(':transport:java-worker')
    implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.31'
    implementation 'com.googlecode.libphonenumber:carrier:2.31'

    testImplementation platform('org.junit:junit-bom:6.0.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('runScenarioWorkers', JavaExec) {
    description = 'Runs the standalone Scenario Worker Host.'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = application.mainClass
    workingDir = rootProject.projectDir
}
